export interface ItemDetailsBO {
  Id: number;
  BarcodeID: string;
  ItemID: string;
  Name: string;
  Description: string;
  ActualCount: string;
  Count: string;
  FirstCount: string;
  Location: string;
  Stock_Level_1: string;
  Stock_Level_2: string;
  Stock_Level_3: string;
  Stock_Level_4: string;
  ImageURL: string;
  Status: string;
  LastUpdated: string;
  LockedTo: string;
  UOM: string;
  Count_DTTM: string;
}
